Somehow fixed a layout bug

--- a/app/assets/stylesheets/controllers/shared-layout.sass
+++ b/app/assets/stylesheets/controllers/shared-layout.sass
@@ -88,6 +88,9 @@
       padding-right: 0px
       padding-top: 0px
 
+  &--profile--company
+    @extend .container--profile
+
 .frame
   overflow: hidden
   padding: 24px
